--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 </head>
 
 <body>
-    <h1>Hello, World!</h1>
+    My life 
+        <h3>my name is ABDULKARIM KHAMIS NASSOR. I am a student of STATE UNIVERESIY IN ZANZIBAR, I Studied my secondary in ubungo islamic school.<br>
+        i finished my advance in 2021 with a combination of pcb, i dreamed to be a doctor but alhamdulillah allah gave me another path as me to be a good developer.</h3>
 </body>
 
 </html>
